Add tests for the service layer